--- a/AutoAlignment2D/MainWindow.xaml
+++ b/AutoAlignment2D/MainWindow.xaml
@@ -1,9 +1,12 @@
-﻿<Window x:Class="AutoAlignment2D.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AutoAlignment2D"
+        
+        xmlns:HalconDotNet="clr-namespace:HalconDotNet;assembly=halcondotnet" x:Class="AutoAlignment2D.MainWindow"
+        
         mc:Ignorable="d"
         Title="MainWindow" Height="768" Width="1024">
     <Grid RenderTransformOrigin="0.474,0.726">
@@ -22,7 +25,7 @@
             <Button x:Name="btnFindMark" Height="40" >
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                     <Image Width="40" Height="40" HorizontalAlignment="Left"/>
-                    <TextBlock VerticalAlignment="Center"  FontSize="16">TEST</TextBlock>
+                    <TextBlock VerticalAlignment="Center"  FontSize="16"><Run Text="TEST"/></TextBlock>
 
                 </StackPanel>
             </Button>
@@ -52,12 +55,12 @@
 
         </StackPanel>
         <StackPanel HorizontalAlignment="Left" Margin="627,18,0,507" Width="90">
-            <TextBox x:Name="txtBondPadCenterX" Height="30" TextWrapping="Wrap" TextAlignment="Center"  Text="{Binding InputManager.BondpadCenterX,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"/>
-            <TextBox x:Name="txtBondPadCenterY" Height="30" TextWrapping="Wrap" TextAlignment="Center"  Text="{Binding InputManager.BondpadCenterY,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"/>
-            <TextBox x:Name="txtProbeCCDX" Height="30" TextWrapping="Wrap" TextAlignment="Center"  Text="{Binding InputManager.CCD2ProbeX,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"/>
-            <TextBox x:Name="txtProbeCCDY" Height="30" TextWrapping="Wrap"  TextAlignment="Center" Text="{Binding InputManager.CCD2ProbeY,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"/>
-            <TextBox x:Name="txtProbeCCDSita" Height="30" TextWrapping="Wrap"  TextAlignment="Center" Text="{Binding InputManager.CCD2ProbeSita,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"/>
-            <TextBox x:Name="txtProbeRotateR" Height="30" TextWrapping="Wrap"  TextAlignment="Center" Text="{Binding InputManager.ProbeHeadRotateR,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"/>
+            <TextBox x:Name="txtBondPadCenterX" Height="30" TextWrapping="Wrap" TextAlignment="Center"  Text="{Binding InputManager.BondpadCenterX, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox x:Name="txtBondPadCenterY" Height="30" TextWrapping="Wrap" TextAlignment="Center"  Text="{Binding InputManager.BondpadCenterY, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox x:Name="txtProbeCCDX" Height="30" TextWrapping="Wrap" TextAlignment="Center"  Text="{Binding InputManager.CCD2ProbeX, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox x:Name="txtProbeCCDY" Height="30" TextWrapping="Wrap"  TextAlignment="Center" Text="{Binding InputManager.CCD2ProbeY, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox x:Name="txtProbeCCDSita" Height="30" TextWrapping="Wrap"  TextAlignment="Center" Text="{Binding InputManager.CCD2ProbeSita, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox x:Name="txtProbeRotateR" Height="30" TextWrapping="Wrap"  TextAlignment="Center" Text="{Binding InputManager.ProbeHeadRotateR, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
         </StackPanel>
         <StackPanel HorizontalAlignment="Left" Height="237" Margin="480,263,0,0" VerticalAlignment="Top" Width="144">
@@ -92,11 +95,13 @@
             <Label x:Name="label18" Content="Adjust X: " Height="30" HorizontalAlignment="Right"/>
             <Label x:Name="label19" Content="Adjust Y:"  Height="30" HorizontalAlignment="Right"/>
             <Label x:Name="label20" Content="Adjust θ:" Height="30" HorizontalAlignment="Right" />
+            <HalconDotNet:HWindowControlWPF Height="100"/>
         </StackPanel>
         <StackPanel HorizontalAlignment="Left" Margin="878,18,0,556" Width="90">
             <TextBox x:Name="txtAdjustOutputX" Height="30" TextWrapping="Wrap" TextAlignment="Center" IsEnabled="False"  Text="{Binding OutputManager.AlignmentX, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             <TextBox x:Name="txtAdjustOutputY" Height="30" TextWrapping="Wrap" TextAlignment="Center"   IsEnabled="False"  Text="{Binding OutputManager.AlignmentY, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             <TextBox x:Name="txtAdjustOutputSita" Height="30" TextWrapping="Wrap" TextAlignment="Center"   IsEnabled="False"  Text="{Binding OutputManager.AlignmentSita, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <HalconDotNet:HSmartWindowControlWPF Height="100"/>
         </StackPanel>
         <StackPanel HorizontalAlignment="Left" Height="164" Margin="968,18,0,0" VerticalAlignment="Top" Width="44">
             <Label x:Name="label23" Content="mm" Height="30"/>
